# zeusops-attendance-bot

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/source/: architecture.md  conf.py  index.rst  readme.md
src/zeusops_attendance_bot/: __init__.py  api.py  attendance.py  cli.py  database.py  models.py  parsing.py  preprocess.py
src/zeusops_attendance_bot/mission_recording/: README.md  __init__.py  database.py  models.py
tests/: __init__.py  test_attendance_parsing.py  test_zeusops_attendance_bot.py
